--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,23 @@
 theme: jekyll-theme-minimal
+
+title: Octeufer`s personal webpage
+description: Who am I? Where am I from? What does I do?
+
+logo: /assets/image/nerv.jpg
+
+nav:
+- name: Home
+  link: /
+- name: About
+  link: /about.html
+
+// 以下嵌入页面，page.url以 "/" 开头
+<nav>
+  {% for item in site.nav %}
+    <a href="{{ item.link }}" 
+      {% if page.url == item.link %} style="color: red;" {% endif %}
+    >
+      {{ item.name }}
+    </a>
+  {% endfor %}
+</nav>
