--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ description: Who am I? Where am I from? What does I do?
 
 logo: /assets/image/nerv.jpg
 
-nav:
-- name: Home
-  link: /
-- name: About
-  link: /about.html
+# nav:
+# - name: Home
+#   link: /
+# - name: About
+#   link: /about.html
 
-<nav>
-  {% for item in site.nav %}
-    <a href="{{ item.link }}" 
-      {% if page.url == item.link %} style="color: red;" {% endif %}
-    >
-      {{ item.name }}
-    </a>
-  {% endfor %}
-</nav>
+# <nav>
+#   {% for item in site.nav %}
+#     <a href="{{ item.link }}" 
+#       {% if page.url == item.link %} style="color: red;" {% endif %}
+#     >
+#       {{ item.name }}
+#     </a>
+#   {% endfor %}
+# </nav>
