--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 
-title: Octeufer`s personal webpage
-description: Who am I? Where am I from? What does I do?
+title: Octeufer
+description: Personal Webpage
 
 logo: /assets/image/nerv.jpg
 
